Enable all functions by default

--- a/xutils.config
+++ b/xutils.config
@@ -1,28 +1,28 @@
-USE_ADDR=n
-USE_ARRAY=n
-USE_CRYPT=n
-USE_XTIME=n
-USE_EVENT=n
-USE_LIST=n
-USE_HASH=n
-USE_XLOG=n
-USE_XMAP=n
-USE_XSTR=n
-USE_XTYPE=n
-USE_XBUF=n
-USE_XTOP=n
-USE_XCLI=n
-USE_ERREX=n
-USE_HTTP=n
-USE_SOCK=n
-USE_SYNC=n
-USE_XCPU=n
-USE_XAES=n
-USE_THREAD=n
-USE_XJSON=n
-USE_XFS=n
-USE_XAPI=n
-USE_MDTP=n
-USE_NTP=n
-USE_RTP=n
-USE_TS=n
+USE_ADDR=y
+USE_ARRAY=y
+USE_CRYPT=y
+USE_XTIME=y
+USE_EVENT=y
+USE_LIST=y
+USE_HASH=y
+USE_XLOG=y
+USE_XMAP=y
+USE_XSTR=y
+USE_XTYPE=y
+USE_XBUF=y
+USE_XTOP=y
+USE_XCLI=y
+USE_ERREX=y
+USE_HTTP=y
+USE_SOCK=y
+USE_SYNC=y
+USE_XCPU=y
+USE_XAES=y
+USE_THREAD=y
+USE_XJSON=y
+USE_XFS=y
+USE_XAPI=y
+USE_MDTP=y
+USE_NTP=y
+USE_RTP=y
+USE_TS=y
