Selective building functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,13 +28,34 @@ include_directories(${SOURCE_DIR} ${MEDIA_DIR})
 
 add_library(xutils STATIC
     ${SOURCE_DIR}/xver.c
+    ${SOURCE_DIR}/addr.c
     ${SOURCE_DIR}/array.c
     ${SOURCE_DIR}/crypt.c
-    ${SOURCE_DIR}/xstr.c
-    ${SOURCE_DIR}/xtype.c
-    ${SOURCE_DIR}/xbuf.c
+    ${SOURCE_DIR}/errex.c
+    ${SOURCE_DIR}/event.c
+    ${SOURCE_DIR}/hash.c
+    ${SOURCE_DIR}/http.c
+    ${SOURCE_DIR}/list.c
+    ${SOURCE_DIR}/sock.c
     ${SOURCE_DIR}/sync.c
+    ${SOURCE_DIR}/thread.c
     ${SOURCE_DIR}/xaes.c
+    ${SOURCE_DIR}/xbuf.c
+    ${SOURCE_DIR}/xcli.c
+    ${SOURCE_DIR}/xcpu.c
+    ${SOURCE_DIR}/xfs.c
+    ${SOURCE_DIR}/xjson.c
+    ${SOURCE_DIR}/xlog.c
+    ${SOURCE_DIR}/xmap.c
+    ${SOURCE_DIR}/xstr.c
+    ${SOURCE_DIR}/xtime.c
+    ${SOURCE_DIR}/xtop.c
+    ${SOURCE_DIR}/xtype.c
+    ${MEDIA_DIR}/xapi.c
+    ${MEDIA_DIR}/mdtp.c
+    ${MEDIA_DIR}/ntp.c
+    ${MEDIA_DIR}/rtp.c
+    ${MEDIA_DIR}/ts.c
 )
 
 install(TARGETS xutils DESTINATION lib)
