Refactored build workflows

--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -2,16 +2,16 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: make
+
+    - name: Make build
       run: make
