--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,11 @@
         "string": "c",
         "string_view": "c",
         "stdio.h": "c",
-        "sha1.h": "c"
+        "sha1.h": "c",
+        "compare": "c",
+        "functional": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c"
     }
 }
