Better build scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,43 +31,43 @@ include_directories(
 )
 
 add_library(xutils STATIC
-    ${SOURCE_DIR}/xver.c
-    ${DATA_DIR}/array.c
-    ${DATA_DIR}/xjson.c
-    ${DATA_DIR}/xbuf.c
-    ${DATA_DIR}/hash.c
-    ${DATA_DIR}/list.c
-    ${DATA_DIR}/xstr.c
-    ${DATA_DIR}/map.c
-    ${DATA_DIR}/jwt.c
-    ${CRYPT_DIR}/crypt.c
-    ${CRYPT_DIR}/aes.c
-    ${CRYPT_DIR}/base64.c
-    ${CRYPT_DIR}/sha256.c
-    ${CRYPT_DIR}/sha1.c
-    ${CRYPT_DIR}/crc32.c
-    ${CRYPT_DIR}/hmac.c
-    ${CRYPT_DIR}/md5.c
-    ${CRYPT_DIR}/rsa.c
-    ${NET_DIR}/event.c
-    ${NET_DIR}/addr.c
-    ${NET_DIR}/http.c
-    ${NET_DIR}/mdtp.c
-    ${NET_DIR}/sock.c
-    ${NET_DIR}/api.c
-    ${NET_DIR}/ntp.c
-    ${NET_DIR}/rtp.c
-    ${NET_DIR}/ws.c
-    ${SYS_DIR}/thread.c
-    ${SYS_DIR}/xtype.c
-    ${SYS_DIR}/xtime.c
-    ${SYS_DIR}/sync.c
-    ${SYS_DIR}/xsig.c
-    ${SYS_DIR}/xcli.c
-    ${SYS_DIR}/xcpu.c
-    ${SYS_DIR}/xlog.c
-    ${SYS_DIR}/xtop.c
-    ${SYS_DIR}/xfs.c
+    ./src/xver.c
+    ./src/crypt/aes.c
+    ./src/crypt/base64.c
+    ./src/crypt/crc32.c
+    ./src/crypt/crypt.c
+    ./src/crypt/hmac.c
+    ./src/crypt/md5.c
+    ./src/crypt/rsa.c
+    ./src/crypt/sha256.c
+    ./src/crypt/sha1.c
+    ./src/data/array.c
+    ./src/data/hash.c
+    ./src/data/jwt.c
+    ./src/data/list.c
+    ./src/data/map.c
+    ./src/data/xbuf.c
+    ./src/data/xjson.c
+    ./src/data/xstr.c
+    ./src/net/addr.c
+    ./src/net/event.c
+    ./src/net/http.c
+    ./src/net/mdtp.c
+    ./src/net/ntp.c
+    ./src/net/rtp.c
+    ./src/net/sock.c
+    ./src/net/api.c
+    ./src/net/ws.c
+    ./src/sys/sync.c
+    ./src/sys/thread.c
+    ./src/sys/xcli.c
+    ./src/sys/xcpu.c
+    ./src/sys/xfs.c
+    ./src/sys/xlog.c
+    ./src/sys/xsig.c
+    ./src/sys/xtime.c
+    ./src/sys/xtop.c
+    ./src/sys/xtype.c
 )
 
 install(TARGETS xutils DESTINATION lib)
