--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -1,4 +1,4 @@
-name: Build Script
+name: Full Build
 
 on:
   push:
@@ -30,11 +30,20 @@ jobs:
     - name: Install SMAKE
       run: cd smake && ./build.sh --install
 
-    - name: Build with SMAKE
+    - name: Build with SMAKE with SSL
       run: ./build.sh smake
 
-    - name: Build with CMAKE
+    - name: Build with SMAKE no SSL
+      run: ./build.sh smake --ssl=no
+
+    - name: Build with CMAKE with SSL
       run: ./build.sh cmake
       
-    - name: Build with Makefile
+    - name: Build with CMAKE no SSL
+      run: ./build.sh cmake --ssl=no
+      
+    - name: Build with Makefile with SSL
       run: ./build.sh make
+
+    - name: Build with Makefile no SSL
+      run: ./build.sh make --ssl=no
