Use union for xtime to u64 conversions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "type_traits": "c",
         "utility": "c",
         "xcli.h": "c",
-        "xlog.h": "c"
+        "xlog.h": "c",
+        "xtime.h": "c"
     }
 }
