Simplified CMake, make cmake more flexible, added support of macos, added include pathes from root of src folder to simplify including library in different projects.
Signed-off-by: Oleksandr Ismailov <tama.rilla@protonmail.com>

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,7 +26,10 @@ jobs:
 
     - name: Build with CMAKE
       run: |
-        mkdir build
-        cd build
-        cmake ..
-        make
+        cmake -Bbuild -DCMAKE_INSTALL_PREFIX=./libxutil && cmake --build build --target install
+
+    - name: Uploading libxutils
+      uses: actions/upload-artifact@v3
+      with:
+        name: ubuntu_latest_libxutils
+        path: ./libxutil
