--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,106 +7,39 @@ ELSE()
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -Wall")
 ENDIF()
 
-set(XUTILS_INSTALL_PREFIX "/usr/local")
-string(SUBSTRING "${XUTILS_INSTALL_PREFIX}" 0 2 PREFIX_START)
+# TODO: CMAKE very smart and can count on usage CMAKE_INSTALL_PREFIX variable
+#set(XUTILS_INSTALL_PREFIX "/usr/local")
+#string(SUBSTRING "${XUTILS_INSTALL_PREFIX}" 0 2 PREFIX_START)
+#
+#if("${PREFIX_START}" STREQUAL "./")
+#  get_filename_component(CURRENT_WORKING_DIR "${CMAKE_SOURCE_DIR}" REALPATH)
+#  string(SUBSTRING "${XUTILS_INSTALL_PREFIX}" 1 -1 RELATIVE_PATH)
+#  set(CMAKE_INSTALL_PREFIX "${CURRENT_WORKING_DIR}${RELATIVE_PATH}")
+#endif()
 
-if("${PREFIX_START}" STREQUAL "./")
-  get_filename_component(CURRENT_WORKING_DIR "${CMAKE_SOURCE_DIR}" REALPATH)
-  string(SUBSTRING "${XUTILS_INSTALL_PREFIX}" 1 -1 RELATIVE_PATH)
-  set(CMAKE_INSTALL_PREFIX "${CURRENT_WORKING_DIR}${RELATIVE_PATH}")
-endif()
-
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
+# TODO: looks like it is not used
+#set(THREADS_PREFER_PTHREAD_FLAG ON)
+#find_package(Threads REQUIRED)
 
 find_package(OpenSSL)
-IF(OpenSSL_FOUND)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
-ENDIF()
-
-SET(HEADER_DST "include/xutils")
-SET(SOURCE_DIR "./src")
-SET(CRYPT_DIR "./src/crypt")
-SET(DATA_DIR "./src/data")
-SET(NET_DIR "./src/net")
-SET(SYS_DIR "./src/sys")
+if(OpenSSL_FOUND)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
+endif()
 
 include_directories(
-    ${SOURCE_DIR}
-    ${CRYPT_DIR}
-    ${DATA_DIR}
-    ${NET_DIR}
-    ${SYS_DIR}
-)
+    src)
 
+file(GLOB_RECURSE xutils_SOURCE src/*.c)
 add_library(xutils STATIC
-    ./src/xver.c
-    ./src/crypt/aes.c
-    ./src/crypt/base64.c
-    ./src/crypt/crc32.c
-    ./src/crypt/crypt.c
-    ./src/crypt/hmac.c
-    ./src/crypt/md5.c
-    ./src/crypt/rsa.c
-    ./src/crypt/sha256.c
-    ./src/crypt/sha1.c
-    ./src/data/array.c
-    ./src/data/hash.c
-    ./src/data/jwt.c
-    ./src/data/list.c
-    ./src/data/map.c
-    ./src/data/xbuf.c
-    ./src/data/xjson.c
-    ./src/data/xstr.c
-    ./src/net/addr.c
-    ./src/net/event.c
-    ./src/net/http.c
-    ./src/net/mdtp.c
-    ./src/net/ntp.c
-    ./src/net/rtp.c
-    ./src/net/sock.c
-    ./src/net/api.c
-    ./src/net/ws.c
-    ./src/sys/sync.c
-    ./src/sys/thread.c
-    ./src/sys/xcli.c
-    ./src/sys/xcpu.c
-    ./src/sys/xfs.c
-    ./src/sys/xlog.c
-    ./src/sys/xsig.c
-    ./src/sys/xtime.c
-    ./src/sys/xtop.c
-    ./src/sys/xtype.c
-)
+    ${xutils_SOURCE})
+
+target_link_libraries(xutils
+    PUBLIC
+    OpenSSL::SSL)
 
 install(TARGETS xutils DESTINATION lib)
-
-install(DIRECTORY "${SOURCE_DIR}/"
-    DESTINATION "${HEADER_DST}"
+install(DIRECTORY
+    src/
+    DESTINATION include/xutils
     FILES_MATCHING
-    PATTERN "*.h"
-)
-
-install(DIRECTORY "${CRYPT_DIR}/"
-    DESTINATION "${HEADER_DST}"
-    FILES_MATCHING
-    PATTERN "*.h"
-)
-
-install(DIRECTORY "${DATA_DIR}/"
-    DESTINATION "${HEADER_DST}"
-    FILES_MATCHING
-    PATTERN "*.h"
-)
-
-install(DIRECTORY "${NET_DIR}/"
-    DESTINATION "${HEADER_DST}"
-    FILES_MATCHING
-    PATTERN "*.h"
-)
-
-install(DIRECTORY "${SYS_DIR}/"
-    DESTINATION "${HEADER_DST}"
-    FILES_MATCHING
-    PATTERN "*.h"
-)
+    PATTERN "*.h")
