Added additional little fix for autoresolving path for installation folder according to GNU guidelines.
Signed-off-by: Oleksandr Ismailov <tama.rilla@protonmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,9 +37,14 @@ target_link_libraries(xutils
     PUBLIC
     OpenSSL::SSL)
 
-install(TARGETS xutils DESTINATION lib)
+include(GNUInstallDirs)
+install(TARGETS xutils EXPORT xutils
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR})
+
 install(DIRECTORY
     src/
-    DESTINATION include/xutils
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/xutils
     FILES_MATCHING
     PATTERN "*.h")
