--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -45,15 +45,15 @@ jobs:
         ./build.sh --tool=smake --tools --examples --ssl=no
         ./tools/xutils
 
-    - name: Build with CMAKE (SSL)
-      run: |
-        ./build.sh --tool=cmake --tools --examples
-        ./tools/build/xutils
-
-    - name: Build with CMAKE (no SSL)
-      run: |
-        ./build.sh --tool=cmake --tools --examples --ssl=no
-        ./tools/build/xutils
+#    - name: Build with CMAKE (SSL)
+#      run: |
+#        ./build.sh --tool=cmake --tools --examples
+#        ./tools/build/xutils
+#
+#    - name: Build with CMAKE (no SSL)
+#      run: |
+#        ./build.sh --tool=cmake --tools --examples --ssl=no
+#        ./tools/build/xutils
 
     - name: Build with Makefile (SSL)
       run: |
