--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
 project(libxutils LANGUAGES C)
 
+# Define an option for SSL support
+option(WITH_SSL "Enable SSL support with OpenSSL" OFF)
+
 IF (WIN32)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Od /W3")
 ELSE()
@@ -19,10 +22,25 @@ endif()
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-find_package(OpenSSL)
-IF(OpenSSL_FOUND)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
-ENDIF()
+# Check if the system is macOS
+if(APPLE)
+    if(WITH_SSL)
+        find_package(OpenSSL REQUIRED)
+        if(OpenSSL_FOUND)
+            set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
+            message(STATUS "SSL support enabled with OpenSSL")
+        else()
+            message(FATAL_ERROR "OpenSSL not found on macOS, but WITH_SSL is ON.")
+        endif()
+    else()
+        message(STATUS "Skipping SSL support on macOS, WITH_SSL option is OFF.")
+    endif()
+else()
+    find_package(OpenSSL)
+    if(OpenSSL_FOUND)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
+    endif()
+endif()
 
 SET(HEADER_DST "include/xutils")
 SET(SOURCE_DIR "./src")
