--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
 project(libxutils LANGUAGES C)
 
-# Define an option for SSL support
-option(WITH_SSL "Enable SSL support with OpenSSL" OFF)
-
 IF (WIN32)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Od /W3")
 ELSE()
@@ -22,24 +19,11 @@ endif()
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-# Check if the system is macOS
-if(APPLE)
-    if(WITH_SSL)
-        find_package(OpenSSL REQUIRED)
-        if(OpenSSL_FOUND)
-            set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
-            message(STATUS "SSL support enabled with OpenSSL")
-        else()
-            message(FATAL_ERROR "OpenSSL not found on macOS, but WITH_SSL is ON.")
-        endif()
-    else()
-        message(STATUS "Skipping SSL support on macOS, WITH_SSL option is OFF.")
-    endif()
-else()
-    find_package(OpenSSL)
-    if(OpenSSL_FOUND)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
-    endif()
+find_package(OpenSSL)
+if(OpenSSL_FOUND)
+    include_directories(${OPENSSL_INCLUDE_DIR})
+    link_directories(${OPENSSL_LIBRARIES})
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_SSL")
 endif()
 
 SET(HEADER_DST "include/xutils")
