--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -35,6 +35,8 @@ set(XUTILS_USE_SSL $ENV{XUTILS_USE_SSL})
 if(XUTILS_USE_SSL STREQUAL "y")
     find_package(OpenSSL)
     if(OpenSSL_FOUND)
+        include_directories(${OPENSSL_INCLUDE_DIR})
+        link_directories(${OPENSSL_LIBRARIES})
         add_definitions(-D_XUTILS_USE_SSL)
         list(APPEND EXTRA_LIBS ${OPENSSL_LIBRARIES})
     endif()
