Added memory pool in cmake and smake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_library(xutils STATIC
     ./src/net/api.c
     ./src/net/ws.c
     ./src/sys/sync.c
+    ./src/sys/pool.c
     ./src/sys/thread.c
     ./src/sys/xcli.c
     ./src/sys/xcpu.c
