--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install CMake
-      run: choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' --no-progress
+      run: choco install cmake --version 3.31.0 --installargs 'ADD_CMAKE_TO_PATH=System' --no-progress
 
     - name: Install dependencies
       run: choco install openssl --no-progress
