--- a/xutils.conf
+++ b/xutils.conf
@@ -10,11 +10,11 @@ USE_SHA1=y
 USE_ARRAY=y
 USE_HASH=y
 USE_JWT=y
+USE_JSON=y
 USE_LIST=y
 USE_MAP=y
-USE_XBUF=y
-USE_XJSON=y
-USE_XSTR=y
+USE_BUF=y
+USE_STR=y
 USE_ADDR=y
 USE_EVENT=y
 USE_HTTP=y
@@ -27,11 +27,11 @@ USE_WS=y
 USE_SYNC=y
 USE_POOL=y
 USE_THREAD=y
-USE_XCLI=y
-USE_XCPU=y
+USE_TYPE=y
+USE_CLI=y
+USE_CPU=y
+USE_MON=y
+USE_SIG=y
+USE_LOG=y
 USE_XFS=y
-USE_XLOG=y
-USE_XSIG=y
 USE_XTIME=y
-USE_XTOP=y
-USE_XTYPE=y
