--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,35 +28,38 @@ jobs:
       - name: Set XCrypt Chain Variable
         run: echo "ENCODING_CHAIN=casear:base64:base64url:xor:hex:reverse:crc32:sha256:sha1:md5:sha1sum:md5sum:sha256sum" >> $GITHUB_ENV
 
-      - name: Run Valgrind Memory Check With tools/xsrc
+      - name: Run Valgrind Check With tools/xsrc
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xsrc -rvd ./
 
-      - name: Run Valgrind Memory Check With tools/xhttp
-        run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xhttp -fl github.com
+      - name: Run Valgrind Check With tools/xhttp
+        run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xhttp -dl github.com -v
 
-      - name: Run Valgrind Memory Check With tools/xjson
+      - name: Run Valgrind Check With tools/xjson
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xjson -i ./examples/example.json -pl 2
 
-      - name: Run Valgrind Memory Check With tools/xcrypt
+      - name: Run Valgrind Check With tools/xcrypt
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xcrypt -pi ./tools/xutils.c -c $ENCODING_CHAIN -k 5
 
-      - name: Run Valgrind Memory Check With examples/files
+      - name: Run Valgrind Check With tools/xtop
+        run: timeout --signal=SIGINT 10s valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./tools/xtop
+
+      - name: Run Valgrind Check With examples/files
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/files ./examples/files.c ./examples/files.copy
 
-      - name: Run Valgrind Memory Check With examples/strings
+      - name: Run Valgrind Check With examples/strings
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/strings
 
-      - name: Run Valgrind Memory Check With examples/thread
+      - name: Run Valgrind Check With examples/thread
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/thread
 
-      - name: Run Valgrind Memory Check With examples/array
+      - name: Run Valgrind Check With examples/array
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/array
 
-      - name: Run Valgrind Memory Check With examples/list
+      - name: Run Valgrind Check With examples/list
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/list
 
-      - name: Run Valgrind Memory Check With examples/jwt
+      - name: Run Valgrind Check With examples/jwt
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/jwt
 
-      - name: Run Valgrind Memory Check With examples/xlog
+      - name: Run Valgrind Check With examples/xlog
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/xlog
